fix-header RWD錯誤，overflow掉了延伸的ul

--- a/assets/styles/dependencies/bootstrap.css
+++ b/assets/styles/dependencies/bootstrap.css
@@ -4076,7 +4076,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
           box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
 }
 .navbar-collapse.in {
-  overflow-y: auto;
+  overflow-y: visible;
 }
 @media (min-width: 768px) {
   .navbar-collapse {
