--- a/assets/styles/frontend.less
+++ b/assets/styles/frontend.less
@@ -149,7 +149,6 @@ body > footer {
             }
         }
         &.contact-ntca{
-            margin:4px 0;
             .ntca{
                 line-height: 24px;
                 img{
@@ -160,6 +159,7 @@ body > footer {
             }
         }
         span.copyright {
+            margin:2px 0;
             color:white;
             line-height: 20px;
             font-size: 12px;
