--- a/assets/styles/frontend/header.less
+++ b/assets/styles/frontend/header.less
@@ -162,6 +162,7 @@
 			}
 		}
 		.navbar-right.navbar-collapse{
+			overflow: visible;
 			height:auto;
 			.bar{
 				top:0;
@@ -180,9 +181,10 @@
 						width:auto;
 						display: block;
 					}
-					ul{
-						margin-top:-24px;
-						matgin-left:24px;
+					ul.drop-part-bg{
+						top:0;
+						left:110px;
+						transform: none;
 					}
 				}
 				#signin{
